[gd_scene load_steps=6 format=3 uid="uid://ce1x48ttun1i8"]

[ext_resource type="Script" uid="uid://bljicljso62dp" path="res://Scenes/GameUi/GameUi.gd" id="1_anb74"]
[ext_resource type="FontFile" uid="uid://cx31w30axsp22" path="res://Assets/fonts/LuckiestGuy-Regular.ttf" id="1_mb7aw"]

[sub_resource type="LabelSettings" id="LabelSettings_anb74"]
font = ExtResource("1_mb7aw")
font_size = 32
font_color = Color(1, 0.16078432, 0.47058824, 1)
outline_size = 5
outline_color = Color(0.5529412, 0, 0.23529412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_anolp"]
font = ExtResource("1_mb7aw")
font_size = 48
font_color = Color(0.87058824, 0.41960785, 0.11372549, 1)
outline_size = 5
outline_color = Color(0.5529412, 0, 0.23529412, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tt7lr"]
font = ExtResource("1_mb7aw")
font_size = 48
font_color = Color(0.32156864, 0.654902, 0.27058825, 1)
outline_size = 5
outline_color = Color(0.5529412, 0, 0.23529412, 1)

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_anb74")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "000"
label_settings = SubResource("LabelSettings_anb74")

[node name="GameOverLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"
label_settings = SubResource("LabelSettings_anolp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressSpaceLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Press Label"
label_settings = SubResource("LabelSettings_tt7lr")
horizontal_alignment = 1
vertical_alignment = 1
